# linux-speed-meter

./: .gitignore  AppImageBuilder.yml  BUILD_AND_TEST.md  CHANGELOG.md  CMakeLists-Windows.txt  CMakeLists.txt  FEATURES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  README-Windows.md  README.md  SPEED_TEST_IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md  build.sh  build_all.sh  build_windows.bat  build_windows_cross.sh  clean.sh  cleanup.sh  install.sh  mingw-toolchain.cmake  resources.qrc  run.sh  setup_dev.sh  test_speed_features.sh
build-qt/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build-test/: CMakeCache.txt
docs/: CONTRIBUTING.md  FEATURES.md  RELEASE_NOTES_v2.0.0.md  SCREENSHOTS.md  SPEED_TEST_ARCHITECTURE.md  SPEED_TEST_FIXES.md  SPEED_TEST_GUI.md  SPEED_TEST_GUIDE.md  UPGRADE_GUIDE.md  USER_GUIDE.md
include/: curl_wrapper.h  data_exporter.h  data_manager.h  download_test.h  helpers.h  mainwindow.h  ping_test.h  speed_monitor.h  speed_monitor_linux.h  speed_monitor_qt.h  speed_monitor_win.h  speed_test.h  speed_test_widget.h  speed_test_widget_qt.h  systemtray.h  tray_icon.h  upload_test.h  version.h  window.h
packaging/: build_appimage.sh  build_arch.sh  build_debian.sh  build_rpm.sh
packaging/arch/: PKGBUILD  linux-speed-meter.desktop
packaging/debian/DEBIAN/: control
packaging/debian/usr/share/applications/: linux-speed-meter.desktop
packaging/fedora/: linux-speed-meter.spec
packaging/fedora/RPMS/x86_64/: linux-speed-meter-1.0.0-1.x86_64.rpm  linux-speed-meter-debuginfo-1.0.0-1.x86_64.rpm
packaging/fedora/SRPMS/: linux-speed-meter-1.0.0-1.src.rpm
src/: data_exporter.cpp  data_manager.cpp  download_test.cpp  helpers.cpp  main.cpp  main_qt.cpp  main_windows.cpp  mainwindow.cpp  ping_test.cpp  speed_monitor.cpp  speed_monitor_linux.cpp  speed_monitor_win.cpp  speed_test.cpp  speed_test_widget.cpp  speed_test_widget_qt.cpp  systemtray.cpp  tray_icon.cpp  upload_test.cpp  window.cpp
